# Simple-Code-Editor

./: .gitignore  Cargo.toml  README.MD  todo.md
assets/src/: main.rs
src/: main.rs
src/cmdline/: mod.rs
src/constants/: mod.rs
src/editor/: buffer.rs  mod.rs
src/filelisting/: mod.rs  modold.rs
src/layout_manager/: mod.rs
src/ui/: panel.rs
